--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuex": "^3.6.2",
+    "web3": "^1.6.1",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
