--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "autoprefixer": "^10.4.1",
     "chart.js": "^3.7.0",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "tailwindcss": "^3.0.8",
