--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^3.7.0",
     "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.19.3",
+    "javascript-time-ago": "^2.3.10",
     "nuxt": "^2.15.8",
     "tailwindcss": "^3.0.8",
     "vue": "^2.6.14",
