--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^3.3.5",
     "autoprefixer": "^10.4.1",
     "chart.js": "^3.7.0",
