--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.1",
     "chart.js": "^3.7.0",
     "cookie-universal-nuxt": "^2.1.5",
+    "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
     "javascript-time-ago": "^2.3.10",
     "nuxt": "^2.15.8",
