--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^3.3.5",
+    "@walletconnect/client": "^1.7.5",
+    "@walletconnect/qrcode-modal": "^1.7.5",
+    "@walletconnect/web3-provider": "^1.7.5",
     "autoprefixer": "^10.4.1",
     "chart.js": "^3.7.0",
     "cookie-universal-nuxt": "^2.1.5",
