--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
     "javascript-time-ago": "^2.3.10",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "tailwindcss": "^3.0.8",
     "vue": "^2.6.14",
