--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@walletconnect/client": "^1.7.5",
     "@walletconnect/qrcode-modal": "^1.7.5",
@@ -21,8 +22,10 @@
     "cookie-universal-nuxt": "^2.1.5",
     "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
+    "i": "^0.3.7",
     "javascript-time-ago": "^2.3.10",
     "lodash": "^4.17.21",
+    "npm": "^8.5.5",
     "nuxt": "^2.15.8",
     "tailwindcss": "^3.0.8",
     "vue": "^2.6.14",
