--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-universal-nuxt": "^2.1.5",
     "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.0",
     "i": "^0.3.7",
     "javascript-time-ago": "^2.3.10",
     "lodash": "^4.17.21",
